Implemented CommandFactory Implemented TaskEngine Tested the program for CreateNewTeamCommand