@@ -17,7 +17,7 @@ public class CreateNewBoardInTeamCommand extends BaseCommand {
     @Override
     protected String executeCommand(List<String> parameters) {
         ValidationHelper.validateArgumentsCount(parameters, EXPECTED_NUMBER_OF_ARGUMENTS);
-        String name = parameters.getFirst();
+        String name = parameters.get(0);
         return createBoardInTeam(name);
     }
     private String createBoardInTeam(String name){
